--- a/src/jade/discover/index.jade
+++ b/src/jade/discover/index.jade
@@ -8,7 +8,7 @@ include ../partials/_footer
 body.discover
 	+header()
 	main
-		section.page-hero.orange-gradient
+		section.page-hero.light-blue-gradient
 			.container
 				h1 Discover
 				p Opening new frontiers in understanding human brain structure and function.
