--- a/src/jade/translate/index.jade
+++ b/src/jade/translate/index.jade
@@ -8,7 +8,7 @@ include ../partials/_footer
 body.translate
 	+header()
 	main
-		section.page-hero.blue-gradient
+		section.page-hero.orange-gradient
 			.container
 				h1 Translate
 				p Turning the latest discoveries about human brain structure and function into better outcomes for patients.
