--- a/src/jade/treat/index.jade
+++ b/src/jade/treat/index.jade
@@ -4,13 +4,13 @@ include ../partials/_svg
 include ../partials/_icon
 include ../partials/_footer
 
-+head("Care | The Open Brain Project", "Connecting patients who have questions to answers, students to educational resources, and scientists to the latest tools for advancing knowledge and care.")
-body.care
++head("Treat | The Open Brain Project", "Connecting patients who have questions to answers, students to educational resources, and scientists to the latest tools for advancing knowledge and care.")
+body.treat
 	+header()
 	main
-		section.page-hero.green-gradient
+		section.page-hero.blue-gradient
 			.container
-				h1 Care
+				h1 Treat
 				p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
 		section.resources-for-patients-section
 			.container
@@ -20,6 +20,3 @@ body.care
 				h2 Explore the Human Brain
 	
 	+footer()
-			
-
-
