--- a/src/jade/discover/brainsurvey/index.jade
+++ b/src/jade/discover/brainsurvey/index.jade
@@ -1,13 +1,12 @@
-include ../partials/_head
-include ../partials/_header
-include ../partials/_svg
-include ../partials/_icon
-include ../partials/_footer
+include ../../partials/_head
+include ../../partials/_header
+include ../../partials/_svg
+include ../../partials/_icon
+include ../../partials/_footer
+include ../../partials/_spinner
+include ../../partials/_toggle
 
-include ../partials/_spinner
-include ../partials/_toggle
-
-+head("Brain Survey | The Open Brain Project", "Where personalized medicine meets translational human brain mapping")
++head("Brain Survey | The Open Brain Project", "Where personalized medicine meets translational human brain mapping.")
 body.brainsurvey
 	+header()
 	.page-title
