--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,27 +17,27 @@ body.home
 								| Discover
 								+icon("rarr")
 							p Opening new frontiers in understanding human brain structure and function.
-							.button
-								| Learn More
-								+icon("rarr")
+							//- .button
+							//- 	| Learn More
+							//- 	+icon("rarr")
 					a.link-block.translate-block.orange-gradient(href="/translate")
 						.container
 							h1 
 								| Translate
 								+icon("rarr")
 							p Turning the latest discoveries about human brain structure and function into better outcomes for patients.
-							.button
-								| Learn More
-								+icon("rarr")
+							//- .button
+							//- 	| Learn More
+							//- 	+icon("rarr")
 					a.link-block.treat-block.blue-gradient(href="/treat")
 						.container
 							h1 
 								| Treat
 								+icon("rarr")
 							p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
-							.button
-								| Learn More
-								+icon("rarr")
+							//- .button
+							//- 	| Learn More
+							//- 	+icon("rarr")
 		section.mission-section
 			.container
 				p The Open Brain Project supports discoveries about the human brain and their translation into treatment.
