--- a/src/jade/partials/_nav.jade
+++ b/src/jade/partials/_nav.jade
@@ -10,12 +10,12 @@ mixin nav()
 						a.nav-link.main-nav-link(href="/discover") 
 							| Discover
 							+icon("rarr")
-							+icon("darr") 
+							+icon("dchev") 
 						ul.nav-subgroup.discover-group
 							li.nav-item
-								a.nav-link(href="/XXXXXX") Brain Explorer
+								a.nav-link(href="/discover/brainsurvey") Brain Explorer
 							li.nav-item
-								a.nav-link(href="/XXXXXX") Research Articles
+								a.nav-link(href="/discover/publications") Publications
 								ul.nav-sub-subgroup
 									li.nav-item
 										a.nav-link(href="/XXXXXX") Stroke
@@ -31,7 +31,7 @@ mixin nav()
 						a.nav-link.main-nav-link(href="/translate")
 							| Translate
 							+icon("rarr")
-							+icon("darr")
+							+icon("dchev")
 						ul.nav-subgroup.translate-group
 							li.nav-item
 								a.nav-link(href="/XXXXXX") Brain Mapping with MRI
@@ -41,7 +41,7 @@ mixin nav()
 						a.nav-link.main-nav-link(href="/treat")
 							| Treat
 							+icon("rarr")
-							+icon("darr")
+							+icon("dchev")
 						ul.nav-subgroup.treat-group
 							li.nav-item
 								a.nav-link(href="/XXXXXX") University of Rochester Neurosurgery
