--- a/src/jade/partials/_svg.jade
+++ b/src/jade/partials/_svg.jade
@@ -6,8 +6,10 @@ mixin svg()
 			path(d="M1.5 1.5L4.5 4.5M4.5 1.5L1.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#larr(viewbox="0 0 6 6")
 			path(d="M1 3 L5 3 M1 3 L2.5 1.5 M1 3 L2.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
-		symbol#darr(viewbox="0 0 6 6")
-			path(d="M1 2 L3 4 L5 2" stroke="currentColor",stroke-width="1",fill="none",stroke-linecap="round",stroke-linejoin="round")
+		symbol#dchev(viewbox="0 0 6 6")
+			path(d="M1 2L3 4L5 2" stroke="currentColor",stroke-width="1",fill="none",stroke-linecap="round",stroke-linejoin="round")
+		symbol#rchev(viewbox="0 0 6 6")
+			path(d="M2 1L4 3L2 5" stroke="currentColor",stroke-width="1",fill="none",stroke-linecap="round",stroke-linejoin="round")
 		symbol#zoom-out(viewbox="0 0 7 7")
 			path(d="M1 3 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M4.5 4.5 L6 6 M2.5 3 L3.5 3", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#search(viewbox="0 0 7 7")
