--- a/src/jade/partials/_head.jade
+++ b/src/jade/partials/_head.jade
@@ -6,7 +6,7 @@ mixin head(pageTitle, pageDescription)
 			meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
 			title=pageTitle
 			meta(name="description", content=pageDescription)
-			link(href="../css/style.min.css", rel="stylesheet")
+			link(href="../../css/style.min.css", rel="stylesheet")
 			link(rel="apple-touch-icon", sizes="180x180", href="../img/apple-touch-icon.png")
 			link(rel="icon", type="image/png", sizes="32x32", href="../img/favicon-32x32.png")
 			link(rel="icon", type="image/png", sizes="16x16", href="../img/favicon-16x16.png")
