--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -428,6 +428,11 @@ header {
 	display: inline-block;
 	text-decoration: none;
 
+	&[href="/XXXXXX"] {
+		text-decoration: line-through;
+		color: crimson;
+	}
+
 	&:hover {
 		text-decoration: underline;
 	}
@@ -505,7 +510,7 @@ header {
 			color: $white;
 		}
 
-		.icon-darr {
+		.icon-dchev {
 			display: none;
 		}
 	}
@@ -600,6 +605,14 @@ header {
 	h1 {
 		font-size: 2.5em;
 		margin: 0 0 var(--medium);
+	}
+
+	.backlink {
+		font-size: 2em;
+		color: rgba($white, 0.6);
+		text-decoration: none;
+		margin-bottom: var(--large);
+		font-weight: bold;
 	}
 
 	p {
