--- a/src/jade/partials/_header.jade
+++ b/src/jade/partials/_header.jade
@@ -17,4 +17,7 @@ mixin header()
 					span Menu
 					+icon("menu")
 					+icon("close")
+	section.mission-section
+		.container
+			p Supporting discoveries about the human brain and their translation into treatment.
 	+nav()
