--- a/src/jade/discover/index.jade
+++ b/src/jade/discover/index.jade
@@ -32,9 +32,12 @@ body.discover
 					* “Survival of Retinal Ganglion Cells After Damage to the Occipital Lobe in Humans is Activity-Dependent” [[Link]](https://kilthub.cmu.edu/articles/Survival_of_Retinal_Ganglion_Cells_After_Damage_to_the_Occipital_Lobe_in_Humans_is_Activity-Dependent/7403780)
 					* “A common neural signature of brain injury in concussion and sub-concussion” [[Link]](https://kilthub.cmu.edu/articles/A_common_neural_signature_of_brain_injury_in_concussion_and_sub-concussion/7964984/1)
 					* “Neural consequences of mTBI” [Coming soon: MRI dataset including 130+ Diffusion Tensor MRI scans of mTBI patients and 90+ healthy controls]
-		section#experimental-stimuli.experimental-stimuli-section
+		//- section#experimental-stimuli.experimental-stimuli-section
+		//- 	.container
+		//- 		h2 Experimental Stimuli
+		section#experiment-exchange.experiment-exchange-section
 			.container
-				h2 Experimental Stimuli
+				h2 Experiment Exchange
 		section#code.code-section
 			.container
 				h2 Code
